--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+ic2_version=2.8.170-ex112
+jei_version=15.0.268
